# rsearx

./: .gitignore  .releaserc  Cargo.toml
.github/workflows/: release.yml
src/: args.rs  filter.rs  handlers.rs  main.rs  searx_client.rs
src/frontend_manager/: manager.rs  mod.rs  release.rs  unzip.rs
src/handlers/: save.rs  search.rs  search_helpers.rs
